# jengine

./: .gitmodules  CMakeLists.txt  TODO.md  todo.md
editor/: app.cpp  app.hpp  main.cpp
editor/components/: gizmo_renderer.hpp  light.hpp  lights.hpp  mesh_renderer.hpp  transform.hpp
editor/gui/: editor.hpp  editor_gui.cpp  editor_gui.hpp  imgui_layer.cpp  imgui_layer.hpp  panel.hpp
editor/gui/panels/: console_panel.cpp  console_panel.hpp  inspector_panel.cpp  inspector_panel.hpp  panel.hpp  scene_view_panel.cpp  scene_view_panel.hpp  viewport_panel.cpp  viewport_panel.hpp
editor/renderer/: editor_renderer.cpp  editor_renderer.hpp  editor_scene_view_renderer.cpp  editor_scene_view_renderer.hpp
editor/scene/: editor_camera.hpp
editor/shaders/: editor_pick.frag  editor_present.frag  editor_present.vert  gizmo.frag  gizmo.vert  imgui.frag  imgui.vert  mesh_forward.frag  mesh_normal.frag  mesh_normal.vert  mesh_outline.frag  mesh_outline.vert  mesh_pick.vert  skybox.frag  skybox.vert
engine/core/debug/: assert.hpp  logger.hpp
engine/core/graphics/: command_buffer.hpp  descriptor_set_layout.hpp  descriptor_types.hpp  device.hpp  frame_graph.hpp  image_types.hpp  instance.hpp  material.hpp  mesh_buffer.hpp  pipeline.hpp  render_target.hpp  shader.hpp  swapchain_render_target.hpp  texture.hpp  vertex_types.hpp
engine/core/renderer/: frame_graph.hpp  renderer.hpp
engine/core/renderer/cache/: material_cache.hpp  mesh_cache.hpp  pipeline_cache.hpp  shader_cache.hpp
engine/core/renderer/frame_graph/: attachment.hpp  frame_graph.cpp  frame_graph.hpp  frame_graph_id.hpp  pipeline_description.hpp  render_pass.hpp
engine/core/scene/: camera.hpp  orthographic_camera.hpp  perspective_camera.hpp  scene.hpp
engine/core/window/: window.hpp
engine/drivers/glfw/: glfw_window.cpp  glfw_window.hpp
engine/drivers/vulkan/: convert_vulkan.hpp  vulkan_command_buffer.hpp  vulkan_descriptor_set_layout.cpp  vulkan_descriptor_set_layout.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_instance.cpp  vulkan_instance.hpp  vulkan_material.cpp  vulkan_material.hpp  vulkan_mesh_buffer.cpp  vulkan_mesh_buffer.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_render_target.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_swapchain_render_target.cpp  vulkan_swapchain_render_target.hpp  vulkan_texture.cpp  vulkan_texture.hpp  vulkan_texture_render_target.cpp  vulkan_texture_render_target.hpp  vulkan_viewport.cpp  vulkan_viewport.hpp
engine/import/: mesh.cpp  mesh.hpp
lib/: CMakeLists.txt
lib/data-structure-lib/: CMakeLists.txt
lib/data-structure-lib/include/: dslib.hpp
lib/data-structure-lib/src/: CMakeLists.txt  ulgraph.hpp
lib/util-lib/include/: utilib.hpp
lib/util-lib/src/: CMakeLists.txt
src/: app.cpp  app.hpp  main.cpp
src/core/: GraphicsApi.hpp  WindowApi.hpp  app.cpp  app.hpp
src/core/api/: GraphicsApi.hpp  InputApi.hpp  WindowApi.hpp
src/core/debug/: logger.hpp
src/core/ecs/: Archetype.cpp  Archetype.hpp  Component.cpp  Component.hpp  EcsManager.cpp  EcsManager.hpp  Entity.hpp  System.hpp
src/core/graphics/: device.hpp  instance.hpp  material.hpp  mesh_buffer.hpp  pipeline.hpp  renderer.hpp  vertex_layout.hpp
src/core/graphics/vulkan/: vk_device.cpp  vk_device.hpp  vk_instance.cpp  vk_instance.hpp  vk_material.cpp  vk_material.hpp  vk_mesh_buffer.cpp  vk_mesh_buffer.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_renderer.cpp  vk_renderer.hpp
src/core/window/: glfw_window.cpp  glfw_window.hpp  window.hpp
src/drivers/vulkan/: vulkan_device.cpp  vulkan_device.hpp  vulkan_instance.cpp  vulkan_instance.hpp  vulkan_material.cpp  vulkan_material.hpp  vulkan_mesh_buffer.cpp  vulkan_mesh_buffer.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
src/ecs/: ecs.hpp
src/editor/: editor.cpp  editor.hpp  screen.cpp  screen.hpp  vlk_allocator.cpp  vlk_allocator.hpp
src/editor_ui/: ImGuiLayer.cpp  ImGuiLayer.hpp
src/engine/: engine.hpp
src/gui/: gui.cpp  gui.hpp
src/import/: mesh.hpp
src/logger/: logger.hpp
src/renderer/vulkan/: VulkanApi.cpp  VulkanApi.hpp
src/utils/: SparseVector.hpp  StructureLog.hpp  extent.hpp
src/window/glfw/: GlfwApi.cpp  GlfwApi.hpp
test/: CMakeLists.txt  test.cpp
